# react_test

./: .gitignore  README.md  config.py  logger.py  main.py  prompt.py  pyproject.toml  utils.py
config/: config.example.yaml
public/: react.drawio
